--- a/client/src/components/Common/TopNav/topNav.scss
+++ b/client/src/components/Common/TopNav/topNav.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/_variables';
 
 #top-nav-bar {
-    width: calc(100vw - 72px);
+    width: calc(100vw - 60px);
     position: fixed;
     top: 0;
     right: 0;
